--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
-      width: 300px;
-      height: 20px;
-      background: #444;
-      border: 2px solid white;
+      width: 200px;
+      height: 10px;
+      background: #222;
+      border: 1px solid #555;
     }
     #sprintFill {
       height: 100%;
-      background: lime;
       width: 100%;
-      transition: width 0.1s;
+      background: lime;
     }
   </style>
 </head>
@@ -106,7 +105,6 @@ function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
 const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
 const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
 const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
-ceilMat.side = THREE.DoubleSide;
 
 const collisionBoxes = [];
 function createWall(w, h, d, x, y, z, material) {
@@ -142,31 +140,28 @@ fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c
     });
   });
 
-const velocity = new THREE.Vector3();
-const direction = new THREE.Vector3();
 const keys = {};
-let verticalVelocity = 0;
+document.addEventListener('keydown', e => keys[e.code] = true);
+document.addEventListener('keyup', e => keys[e.code] = false);
+
+const velocity = new THREE.Vector3();
+let velocityY = 0;
 let isOnGround = false;
-const gravity = -0.05;
-const jumpStrength = 1.0;
 
 let sprintAmount = 1.0;
 let cooldown = false;
-
-document.addEventListener('keydown', e => keys[e.code] = true);
-document.addEventListener('keyup', e => keys[e.code] = false);
+const sprintFill = document.getElementById('sprintFill');
 
 function checkCollisions(pos) {
   const box = new THREE.Box3().setFromCenterAndSize(pos, new THREE.Vector3(1, 2, 1));
   return collisionBoxes.some(c => c.intersectsBox(box));
 }
 
-const sprintFill = document.getElementById("sprintFill");
-
 function animate() {
   requestAnimationFrame(animate);
 
   if (controls.isLocked) {
+    const direction = new THREE.Vector3();
     direction.set(0, 0, 0);
     if (keys['KeyW']) direction.z -= 1;
     if (keys['KeyS']) direction.z += 1;
@@ -174,10 +169,10 @@ function animate() {
     if (keys['KeyD']) direction.x += 1;
     direction.normalize();
 
-    let speed = 0.1;
+    let speed = 0.5;
     const sprinting = keys['ShiftLeft'] && sprintAmount > 0 && !cooldown;
     if (sprinting) {
-      speed = 0.2;
+      speed = 1;
       sprintAmount -= 0.01;
       if (sprintAmount <= 0) {
         sprintAmount = 0;
@@ -210,26 +205,29 @@ function animate() {
     move.addScaledVector(right, velocity.x);
 
     const currentPos = controls.getObject().position.clone();
-
     const tryX = currentPos.clone().add(new THREE.Vector3(move.x, 0, 0));
-    if (!checkCollisions(tryX)) controls.getObject().position.x = tryX.x;
-
     const tryZ = currentPos.clone().add(new THREE.Vector3(0, 0, move.z));
+
+    if (!checkCollisions(tryX)) controls.getObject().position.x = tryX.x;
     if (!checkCollisions(tryZ)) controls.getObject().position.z = tryZ.z;
 
-    // Gravity & Jump
-    verticalVelocity += gravity;
-    const tryY = currentPos.clone().add(new THREE.Vector3(0, verticalVelocity, 0));
-    if (!checkCollisions(tryY)) {
-      controls.getObject().position.y = tryY.y;
-      isOnGround = false;
+    // Jumping & Gravity
+    const pos = controls.getObject().position;
+    const nextY = pos.y + velocityY;
+    const footPos = pos.clone(); footPos.y = nextY;
+
+    if (nextY <= 2) {
+      velocityY = 0;
+      isOnGround = true;
+      pos.y = 2;
     } else {
-      if (verticalVelocity < 0) isOnGround = true;
-      verticalVelocity = 0;
+      velocityY -= 0.015; // gravity
+      isOnGround = false;
+      pos.y = nextY;
     }
 
-    if (keys['Space'] && isOnGround) {
-      verticalVelocity = jumpStrength;
+    if (isOnGround && keys['Space']) {
+      velocityY = 0.3;
       isOnGround = false;
     }
   }
@@ -240,3 +238,4 @@ animate();
 </script>
 </body>
 </html>
+
