--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@ wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
 floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
 ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
 
-function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
+function makeRGBMaterial(tex, r, g, b, w, h) {
+  const repeatX = w / 2; // Adjust this divisor to scale the texture how you want
+  const repeatY = h / 2; // Adjust this divisor to scale the texture how you want
+
   return new THREE.ShaderMaterial({
     uniforms: {
       tex: { value: tex },
@@ -102,11 +105,8 @@ function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
   });
 }
 
-const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
-const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
-const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
-
 const collisionBoxes = [];
+
 function createWall(w, h, d, x, y, z, material) {
   const geo = new THREE.BoxGeometry(w, h, d);
   const mesh = new THREE.Mesh(geo, material);
@@ -116,27 +116,31 @@ function createWall(w, h, d, x, y, z, material) {
 }
 
 function createRoom() {
-  createWall(20, 1, 20, 0, 0, 0, floorMat); // floor
+  createWall(20, 1, 20, 0, 0, 0, floorTex); // floor
 
   const ceilGeo = new THREE.PlaneGeometry(20, 20);
-  const ceilMesh = new THREE.Mesh(ceilGeo, ceilMat);
+  const ceilMesh = new THREE.Mesh(ceilGeo, ceilTex);
   ceilMesh.rotation.x = Math.PI / 2;
   ceilMesh.position.y = 5;
   scene.add(ceilMesh);
   collisionBoxes.push(new THREE.Box3().setFromObject(ceilMesh));
 
-  createWall(1, 5, 20, -10, 2.5, 0, wallMat);
-  createWall(1, 5, 20,  10, 2.5, 0, wallMat);
-  createWall(20, 5, 1,  0, 2.5, -10, wallMat);
-  createWall(20, 5, 1,  0, 2.5, 10, wallMat);
+  createWall(1, 5, 20, -10, 2.5, 0, wallTex);
+  createWall(1, 5, 20,  10, 2.5, 0, wallTex);
+  createWall(20, 5, 1,  0, 2.5, -10, wallTex);
+  createWall(20, 5, 1,  0, 2.5, 10, wallTex);
 }
-createRoom();
 
+// Loading your wall data
 fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
   .then(response => response.json())
   .then(data => {
     data.forEach(wall => {
-      createWall(wall.w, wall.h, wall.d, wall.x, wall.y, wall.z, wallMat);
+      // Apply dynamic texture scaling for each wall based on its size
+      createWall(
+        wall.w, wall.h, wall.d, wall.x, wall.y, wall.z,
+        makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, wall.w, wall.h)  // Pass dimensions here
+      );
     });
   });
 
@@ -221,13 +225,13 @@ function animate() {
       isOnGround = true;
       pos.y = 2;
     } else {
-      velocityY -= 0.0015; // gravity
+      velocityY -= 0.015; // gravity
       isOnGround = false;
       pos.y = nextY;
     }
 
     if (isOnGround && keys['Space']) {
-      velocityY = 0.065;
+      velocityY = 0.3;
       isOnGround = false;
     }
   }
@@ -238,4 +242,3 @@ animate();
 </script>
 </body>
 </html>
-
